Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-2111

echo_client does return proper error code when it fails.

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.4.0
    • Lustre 2.4.0
    • None
    • 3
    • 5103

      If MD echo client fails to resolve a path a error is returned by PTR_ERR but the rc variable is never updated with this value to return back thus the application thinks it worked.

            mdiep Minh Diep - TLC
            simmonsja James A Simmons
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: